@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+ * Fix 1.0-backcompat crashing bug for GFF3 files with multi-location features.
+
 1.3       2012-04-25 09:52:00 America/New_York
 
  * Correct synopsis section of Bio::GFF3::LowLevel::Parser.
